# codmiryoku

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  west.yml
.github/workflows/: build.yml
config/: CMakeLists.txt  Kconfig  layers.dtsi  module.yml  totem.conf  totem.keymap  totem_linux.conf  totem_linux.keymap  totem_linux_1.conf  totem_linux_2.conf  totem_mac_1.conf  totem_mac_2.conf  totem_macos.conf  west.yml
config/boards/: CMakeLists.txt
config/boards/shields/: CMakeLists.txt
config/boards/shields/totem/: Kconfig.defconfig  boards.cmake  shield.conf  totem.dtsi  totem.keymap  totem.overlay  totem_left.overlay  totem_right.overlay
config/boards/shields/totem_left/: Kconfig  boards.cmake  totem.dtsi  totem_left.overlay
config/boards/shields/totem_right/: Kconfig  totem.overlay
config/layers/: base.dtsi  fun.dtsi  media.dtsi  mouse.dtsi  nav.dtsi  num.dtsi  sym.dtsi
config/mapping/38/: totem.dtsi
config/reference-totem/: README.md  totem.keymap  totem_linux.keymap
